--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -19,13 +19,13 @@ header {
         //     font-weight: bold;
         //     display: flex;
         //     align-items: center;
-        //     color: $fontColor_1;
+        //     color: $main_Color2;
 
         //     //時間
         //     .time {
         //         font-size: 16px;
         //         margin-left: 10px;
-        //         color: $fontColor_1;
+        //         color: $main_Color2;
         //     }
         // }
 
