--- a/scss/_mainWrap.scss
+++ b/scss/_mainWrap.scss
@@ -47,7 +47,7 @@
 
                     //     &.type {
                     //         font-size: 23px;
-                    //         color: $fontColor_4;
+                    //         color: $headerTop_Remind;
                     //     }
                     // }
                 }
