--- a/scss/_register.scss
+++ b/scss/_register.scss
@@ -65,7 +65,7 @@
                     left: 0;
                     font-size: 12px;
                     font-weight: bold;
-                    color: $fontColor_4;
+                    color: $headerTop_Remind;
                 }
 
                 .eye {
@@ -118,7 +118,7 @@
                     color: $main_Color;
 
                     span {
-                        color: $fontColor_9;
+                        color: $main_Color6;
                     }
                 }
             }
