--- a/scss/_gameWrap.scss
+++ b/scss/_gameWrap.scss
@@ -355,7 +355,7 @@
         width: 1400px;
         height: 120px;
         border-radius: 10px;
-        background: $linear_1;
+        background: $mainBG_2;
         box-shadow: 0px 5px 10px 0px $boxShadow_2;
         display: flex;
         margin: 0 auto;
