--- a/scss/styleGroup/_colorStyle.scss
+++ b/scss/styleGroup/_colorStyle.scss
@@ -26,6 +26,8 @@ $main_Color3:#747474;
 $main_Color4:#3d4cce;
 $main_Color6: #4d4d4d;
 $main_Color7: #4a59ed;
+//內頁金色字
+$inner_Color:#cfa678;
 //主要陰影
 $boxShadow_1:  #dee1f5;
 $boxShadow_2: #c0c0c0;
@@ -320,7 +322,7 @@ $remineText:#333333;
 
 //銀行卡片顏色
 $eMpty_Bg: linear-gradient(120deg,#e8ebf2 0%,#cbcdd3 30%);
-$register_Bg: linear-gradient(120deg,#e8ebf2 0%,#cbcdd3 30%);
+$register_Bg: linear-gradient(120deg,#f1d7b7 0%,#cca172 50%,#f1c999 100%);
 $register_Border: #dbdef4;
 
 //投注金額按鈕白金色
@@ -435,27 +437,6 @@ $backgroundColor_12: #c7c7c7;
 $backgroundColor_13: #cfb53d;
 $backgroundColor_14: #f0f5ff;
 
-
-
-
-$fontColor_1: #ffffff;
-$main_Color: #333333;
-$main_Color7: #4a59ed;
-$fontColor_4: #0df;
-$fontColor_5: #666666;
-$fontColor_6: #3d4cce;
-$fontColor_7: #e11515;
-$fontColor_8: #a5a5a5;
-$fontColor_9: #4d4d4d;
-$fontColor_10: #cfa678;
-$fontColor_11: #f15a24;
-$fontColor_12: #00a99d;
-
-
-
-
-$fontColor_13: #00a99d;
-$fontColor_14: #55aaff;
 
 $borderColor_1: #4a59ed;
 $borderColor_2: #4c4c4c;
