--- a/scss/_register.scss
+++ b/scss/_register.scss
@@ -86,7 +86,7 @@
                     width: 86px;
                     height: 29px;
                     right: 11px;
-                    @include buttonStyle_8;
+                    @include smallBtn;
                 }
             }
 
