--- a/scss/_ad.scss
+++ b/scss/_ad.scss
@@ -80,7 +80,7 @@ main {
     
                 // &::before {
                 //     content: "";
-                //     background: $backgroundColor_2;
+                //     background: $main_Color7;
                 //     position: absolute;
                 //     width: 100%;
                 //     height: 100%;
