--- a/scss/_gameWrap.scss
+++ b/scss/_gameWrap.scss
@@ -1,5 +1,5 @@
 .gameWrap {
-    // background: $backgroundColor_4;
+    // background: $mainBG_1;
 
     //主內容
     .content {
@@ -88,7 +88,7 @@
 
                         //for live真人
                         // .imgBox {
-                        //     border: solid 1px $borderColor_2;
+                        //     border: solid 1px $main_Border;
                         //     border-radius: 5px;
                         //     box-shadow: 0 5px 10px 0 $boxShadow_2;
                         //     background: $linear_2;
