--- a/scss/_mainWrap.scss
+++ b/scss/_mainWrap.scss
@@ -2,7 +2,7 @@
     width: 100%;
     height: auto;
     // padding: 50px 0;
-    // background: $backgroundColor_4;
+    // background: $mainBG_1;
 
     .center {
         width: 1400px;
@@ -72,7 +72,7 @@
         //         justify-content: center;
         //         font-weight: bold;
         //         color: $main_Color;
-        //         border-right: solid 1px $borderColor_2;
+        //         border-right: solid 1px $main_Border;
         //         cursor: pointer;
 
         //         &:last-child {
