--- a/scss/_innerPage.scss
+++ b/scss/_innerPage.scss
@@ -3415,6 +3415,207 @@
                     box-shadow: 0 5px 10px -5px $boxShadow_3;
                     border-radius: 5px;
                     box-sizing: border-box;
+                    display: none;
+
+                    &.display {
+                        display: block;
+                    }
+
+                    .title {
+                        font-size: 17px;
+                        letter-spacing: 2px;
+                        color: $main_Color4;
+                        font-weight: bold;
+                    }
+
+                    .content {
+                        margin-top: 26px;
+
+                        form {
+                            width: 100%;
+                            height: auto;
+
+                            .row {
+                                display: flex;
+                                align-items: center;
+                                height: 41px;
+                                margin-bottom: 22px;
+                                font-weight: bold;
+                                font-size: 15px;
+                                color:$main_Color;
+                                position: relative;
+
+                                i {
+                                    font-size: 16px;
+                                    color: $remindColor_Main;
+                                    margin-right: 5px;
+                                }
+
+                                select {
+                                    width: 257px;
+                                    height: 41px;
+                                    margin-left: 26px;
+                                    @include select_Style;
+                                }
+
+                                input {
+                                    width: 257px;
+                                    height: 41px;
+                                    margin-left: 26px;
+                                    @include inputStyle;
+                                }
+
+                                .remind {
+                                    position: absolute;
+                                    bottom: -17px;
+                                    left: 108px;
+                                    font-size: 12px;
+                                    letter-spacing: 1px;
+                                    color: $main_Color3;
+                                }
+                            }
+
+                            button {
+                                width: 257px;
+                                height: 41px;
+                                margin: 46px 0 0 108px;
+                                @include mainBtn;
+                            }
+                        }
+
+                        .remindBox {
+                            width: 839px;
+                            height: auto;
+                            padding: 15px 19px;
+                            margin: 39px 0 0 -10px;
+                            border: solid 1px $remineBoder;
+                            box-sizing: border-box;
+
+                            div {
+                                color: $remineText;
+                                font-size: 13px;
+                                letter-spacing: 1px;
+                                margin-bottom: 11px;
+
+                                &.title {
+                                    color:$remineTitle;
+                                }
+                            }
+                        }
+                    }
+                }
+                .bottom2 {
+                    width: 100%;
+                    height: auto;
+                    padding: 16px 0 56px 27px;
+                    background: $mainBG_2;
+                    box-shadow: 0 5px 10px -5px $boxShadow_3;
+                    border-radius: 5px;
+                    box-sizing: border-box;
+                    display: none;
+
+                    &.display {
+                        display: block;
+                    }
+
+
+                    .title {
+                        font-size: 17px;
+                        letter-spacing: 2px;
+                        color: $main_Color4;
+                        font-weight: bold;
+                    }
+
+                    .content {
+                        margin-top: 26px;
+
+                        form {
+                            width: 100%;
+                            height: auto;
+
+                            .row {
+                                display: flex;
+                                align-items: center;
+                                height: 41px;
+                                margin-bottom: 22px;
+                                font-weight: bold;
+                                font-size: 15px;
+                                color:$main_Color;
+                                position: relative;
+
+                                i {
+                                    font-size: 16px;
+                                    color: $remindColor_Main;
+                                    margin-right: 5px;
+                                }
+
+                                select {
+                                    width: 257px;
+                                    height: 41px;
+                                    margin-left: 26px;
+                                    @include select_Style;
+                                }
+
+                                input {
+                                    width: 257px;
+                                    height: 41px;
+                                    margin-left: 26px;
+                                    @include inputStyle;
+                                }
+
+                                .remind {
+                                    position: absolute;
+                                    bottom: -25px;
+                                    left: 108px;
+                                    font-size: 12px;
+                                    letter-spacing: 1px;
+                                    color: $main_Color3;
+                                }
+                            }
+
+                            button {
+                                width: 257px;
+                                height: 41px;
+                                margin: 46px 0 0 108px;
+                                @include mainBtn;
+                            }
+                        }
+
+                        .remindBox {
+                            width: 839px;
+                            height: auto;
+                            padding: 15px 19px;
+                            margin: 39px 0 0 -10px;
+                            border: solid 1px $remineBoder;
+                            box-sizing: border-box;
+
+                            div {
+                                color: $remineText;
+                                font-size: 13px;
+                                letter-spacing: 1px;
+                                margin-bottom: 11px;
+
+                                &.title {
+                                    color:$remineTitle;
+                                }
+                            }
+                        }
+                    }
+                }
+                .bottom3 {
+                    width: 100%;
+                    height: auto;
+                    padding: 16px 0 56px 27px;
+                    background: $mainBG_2;
+                    box-shadow: 0 5px 10px -5px $boxShadow_3;
+                    border-radius: 5px;
+                    box-sizing: border-box;
+                    display: none;
+
+                    &.display {
+                        display: block;
+                    }
+
 
                     .title {
                         font-size: 17px;
